# financebot

./: .gitignore  nixpacks.toml  pyproject.toml  requirements.txt  telegram_bot.py  telegram_bot — копия.py
